# FlangParallelAnalyzer

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md
Demo/: Screenshots.md  Video_Drive_Link.md
docs/: heuristics.md  how_classification_works.md  setup.md  test_spec.md
include/FlangParallelAnalyzer/: AccessClassifier.h  LoopParallelAnalysis.h
lib/: AccessClassifier.cpp  CMakeLists.txt  LoopParallelAnalysis.cpp
paper/: FlangParallelAnalyzer_IEEE.tex  FlangParallelAnalyzer_Presentation.pptx  FlangParallelAnalyzer_v2.pptx  make_ppt.py  make_ppt_v2.py  project_explainer.tex
scripts/: build.sh  report.py  run.sh  run_tests.py
testcases/: function_call.f90  nested_loops.f90  trivial_parallel.f90
tests/: run_lit.sh  run_tests.sh
tests/comprehensive/: 01_safe_scale.f90  02_safe_copy.f90  03_safe_fma.f90  04_reduction_sum.f90  05_reduction_product.f90  06_dep_shift1.f90  07_dep_shift_forward.f90  08_dep_inplace.f90  09_dep_large_offset.f90  10_reduction_integer.f90  11_safe_read_only.f90  12_unsafe_function_call.f90  13_unsafe_intrinsic_sqrt.f90  14_nested_outer.f90  15_unsafe_conditional_write.f90  16_unsafe_scatter.f90  17_unsafe_gather.f90  18_safe_step2.f90  19_reduction_saxpy_sum.f90  20_unsafe_alias_inout.f90  21_safe_two_output.f90  22_unsafe_dep_shift2.f90  23_unsafe_nested_reduction.f90  24_safe_nonconstant_bounds.f90  25_unsafe_output_dep.f90  26_safe_double_precision.f90  27_unsafe_cross_array_dep.f90  28_safe_integer_array.f90  29_unsafe_write_constant_idx.f90  30_reduction_norm2.f90
tests/fortran/: loop_carried_dep.f90  reduction.f90
tests/lit/: lit.cfg.py  phase2_array_write.mlir  phase2_nested.mlir  phase2_reads_only.mlir  phase2_scalar_rw.mlir
tools/: CMakeLists.txt
tools/fpa-tool/: CMakeLists.txt  main.cpp
